Updated flash messages, updated permissions, and added debuging output
I updated the flash messages to incude :alert, :error, and :success.
This will make the output much easier to read.

The debugging output was added to the index view.
it now displays the number of params passed,
and prints out each param on a seperate line

--- a/app/views/exceptionhandler/index.html.erb
+++ b/app/views/exceptionhandler/index.html.erb
@@ -1,2 +1,12 @@
 <h1>Exception Handler</h1>
+<br/>
+<strong>Number of params:</strong> <%= params.size %>
+<br/>
+<br/>
+<strong>Params:</strong>
+<% params.each do |param| %>
+	<br/>
+	<%= param %>
+<% end %>
+
 <%= @output %>
