--- a/app/views/exceptionhandler/index.html.erb
+++ b/app/views/exceptionhandler/index.html.erb
@@ -3,10 +3,15 @@
 <strong>Number of params:</strong> <%= params.size %>
 <br/>
 <br/>
-<strong>Params:</strong>
-<% params.each do |param| %>
+<strong>Keys:</strong>
+<% params.keys.each do |param| %>
 	<br/>
 	<%= param %>
 <% end %>
+<br/>
+<br/>
+<strong>Params:</strong>
+<br/>
+<%= params.inspect %>
 
 <%= @output %>
