Changed the "Delete" links into buttons with confirmation
closes #31

--- a/app/views/maps/index.html.erb
+++ b/app/views/maps/index.html.erb
@@ -3,7 +3,8 @@
 <br/>
 <strong>Current Maps:</strong>
 <% Map.all.each do |map| %>
-
   <br/>
-  <%= map[:package] %> <%= map[:build] %> <%= link_to "Delete", "maps/delete/#{map[:map]}" %> 
+  <div>
+    <%= map[:package] %> <%= map[:build] %> <%= button_to "Delete", "delete/#{map[:map]}", :confirm => "Are you sure?" %>
+  </div>
 <% end %>
